k8s/ingress/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: infrastructures
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
        args:
        - --provider=oidc
        - --oidc-issuer-url=http://keycloak.infrastructures.svc.cluster.local:8080/realms/master
        - --client-id=k8s-client
        - --client-secret=secret
        - --cookie-secret=CHANGEME1234567890123456789012
        - --email-domain=*
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        ports:
        - containerPort: 4180
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: infrastructures
spec:
  selector:
    app: oauth2-proxy
  ports:
  - port: 4180
